File Reorganize: separated several operations into its own template files

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   {% block styles %}
-  <link href="{{ static_url("bootstrap/css/bootstrap.css") }}" rel="stylesheet" media="screen">
-  <link href="{{ static_url("bootstrap/css/bootstrap-responsive.css") }}" rel="stylesheet" media="screen">
+  <link href="{{ static_url("bootstrap/css/bootstrap.css") }}" rel="stylesheet">
+  <link href="{{ static_url("bootstrap/css/bootstrap-responsive.css") }}" rel="stylesheet">
   {% end %}
 
   {% block scripts %}
@@ -24,7 +24,7 @@
 	<a class="brand">Virus Experiment</a>
 	<ul class="nav pull-right">
 	  <li class="active">
-	    <a href="#">Server</a>
+	    <a href="#">Pairwise Comparison</a>
 	  </li>
 	  <li><a href="#">Batch Query</a></li>
 	  <li><a href="#">Example</a></li>
