--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html ng-app="ve-web">
 <head>
   <meta charset="UTF-8">
   <title>{% block title %} Virus Experiment Web App {% end %}</title>
@@ -10,10 +10,14 @@
   <link href="{{ static_url("bootstrap/css/bootstrap-responsive.css") }}" rel="stylesheet">
   {% end %}
 
-  {% block scripts %}
+  {% block basic-scripts %}
   <script src="{{ static_url("js/jquery-1.8.0.min.js") }}"></script>
   <script src="{{ static_url("bootstrap/js/bootstrap.min.js") }}"></script>
+  <script src="{{ static_url("js/angular-1.0.7.min.js") }}"></script>
   <script src="{{ static_url("js/index.js") }}"></script>
+  {% end %}
+
+  {% block scripts %}
   {% end %}
 
 </head>
