--- a/templates/pdbchain-selection.html
+++ b/templates/pdbchain-selection.html
@@ -1,49 +1,60 @@
-<div id="pdb-selection" class="tab-pane active">
-  <div id="select-existing-pdb">
-    <form class="form-horizontal select-pdb">
-      <div class="control-group">
-	<label class="control-label">
-	  PDB id
-	</label>
-	<div class="controls">
-	  <input type="text" placeholder="PDB Id">
-	  <span class="help-inline hidden"></span>
-	</div>
+<div>
+  <form class="form-horizontal">
+    <div class="control-group select-pdb">
+      <label class="control-label">
+	PDB id
+      </label>
+      <div class="controls">
+	<input type="text" placeholder="PDB Id" ng-model="pdb{{tab_id}}_name">
+	<span class="help-inline hidden"></span>
       </div>
-
-      <div class="control-group">
-	<label class="control-label">
-	</label>
-	<div class="controls">
-	  <span class="label label-info">Alternative:</span> 
-	  <span>
-	    <a href="">upload</a> your local PDB file?
-	  </span>
-	</div>
+      <label class="control-label">
+      </label>
+      <div class="controls" style="margin-top:10px;">
+	<span class="label label-info">Alternative:</span> 
+	<span>
+	  <a class="upload-pdb" href="">Upload</a> your local PDB file.
+	</span>
       </div>
+    </div>
 
-      <div class="control-group">
-	<label class="control-label">
-	  Chain
-	</label>
-	<div class="controls">
-	  <input type="text" placeholder="Chain id separated by space">
-	  <span class="help-inline hidden"></span>
-	</div>
+    <div class="control-group upload-pdb hidden">
+      <label class="control-label">
+
+      </label>
+      <div class="controls">
+	<input id="file-uploader" type="file">
+	<span class="help-inline hidden"></span>
       </div>
-    </form>
+      <label class="control-label">
+      </label>
+      <div class="controls">
+	<span class="label label-info">Alternative:</span> 
+	<span>
+	  <a class="select-pdb" href="">Select</a> PDB id.
+	</span>
+      </div>
+    </div>
 
-    <p> I would rather use my local PDB file </p>
-  </div>
-  <div class="" id="upload-local-pdb">
-    <h2><strong>Or</strong></h2>
-    <h1>
-      <small>Upload a local file in PDB format</small>
-    </h1>
-    <form class="well">
-      <input class="input-file" type="file">
-    </form>
-  </div>
-  <button class="btn btn-primary">Next</button>
-  <button class="btn">Cancel</button>
+    <div class="control-group">
+      <label class="control-label">
+	Chain
+      </label>
+      <div class="controls">
+	<input type="text" placeholder="Chain id separated by space">
+	<span class="help-inline hidden"></span>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls">
+        <button type="reset" class="btn">Reset</button>
+        <button class="btn btn-primary next-pdb">Next</button>
+      </div>
+    </div>
+
+  </form>
 </div>
+
+
+<script src="{{ static_url("js/pdbchain-selection.js") }}"></script>
